Fix border radius on track detail page not showing when using Safari

--- a/Pages/Detail/DetailGeneral.razor.css
+++ b/Pages/Detail/DetailGeneral.razor.css
@@ -62,6 +62,7 @@
     height: 145px;
     border: 1px solid #1e2022;
     border-radius: 8px;
+    isolation: isolate;
     box-shadow: 1px 1px 8px rgba(30, 32, 34, 0.4);
     overflow: hidden;
 }
